--- a/C/Crocs/Crocs_SpringSummer_Lifestyle_2019/ad.html
+++ b/C/Crocs/Crocs_SpringSummer_Lifestyle_2019/ad.html
@@ -262,7 +262,7 @@
             }
         }
         var subsubheaders = document.querySelectorAll('#subHeaderWrapper > div');
-        for(var i = 0; i < subheaders.length; i++) {
+        for(var i = 0; i < subsubheaders.length; i++) {
             subsubheaders[i].onclick = function() {
               loadContent(this.dataset.id);
             }
