--- a/C/Crocs/Crocs_SpringSummer_Lifestyle_2019/ads/320x50/320x50.html
+++ b/C/Crocs/Crocs_SpringSummer_Lifestyle_2019/ads/320x50/320x50.html
@@ -141,7 +141,7 @@
         data-text="headlineText"
         data-style="text-align:center;"
         style="top:10px;
-          left:4px;
+          left:7px;
           width:120px;
           height:30px;
           font-size:25px;
@@ -203,9 +203,9 @@
         ad.contentSetup({
           cam: {
             // layout: 'ClassicClog',
-            language: 'Chinese',
-            backgroundColor: 'darkblue',
-            layoutColor: '#f1718b',
+            language: 'English',
+            backgroundColor: 'lightblue',
+            layoutColor: '#518fc4',
             logoImage: 'assets/Crocs_CAYA_LOGO.png',
             // backgroundImage: 'assets/320x50_backgroundImage.png',
             oddRowsImage: 'assets/1x1.png',
