--- a/C/Crocs/Crocs_SpringSummer_2019/ads/320x50/320x50.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ads/320x50/320x50.html
@@ -203,9 +203,9 @@
         ad.contentSetup({
           cam: {
             // layout: 'ClassicClog',
-            language: 'English',
-            backgroundColor: 'lightblue',
-            layoutColor: '#518fc4',
+            language: 'Chinese',
+            backgroundColor: 'darkblue',
+            layoutColor: '#f1718b',
             logoImage: 'assets/Crocs_CAYA_LOGO.png',
             // backgroundImage: 'assets/320x50_backgroundImage.png',
             oddRowsImage: 'assets/1x1.png',
