--- a/C/Crocs/Crocs_SpringSummer_Lifestyle_2019/ad.html
+++ b/C/Crocs/Crocs_SpringSummer_Lifestyle_2019/ad.html
@@ -51,6 +51,11 @@
         height: 120px;
         background-size: 100%;
       }
+      .modelImage1 {
+        width: 100px;
+        height: 75px;
+        background-size: 100%;
+      }
       .modelLabel {
         padding: 5px 0px;
         border: 2px solid #e5e5e5;
@@ -212,7 +217,8 @@
         var model = adContent.data[0].MODEL;
         var productName = adContent.name;
         location.hash = btoa(model+'|'+productName).replace('==','');
-        htmlContent += celebritiesFeedData.map(function(data){ var product = data.data.find(function(product) { return product.name == productName }); if(!product){ var product = data.data[0] } var adData = product.data.find(function(obj){ return obj.AD_SIZE == '300x600'; }); return '<div '+(model == data.name ? 'class="selected"' : '')+' data-id="' + data.name + '"><div class="modelImage" style="background-image:url(\'' + 'assets/'+ adData.MODEL + '/' + adData.IMAGE_URL3 + '\')"></div><div class="modelLabel">'+data.name + '</div></div>' }).join('');
+        var modelCount = celebritiesFeedData.length;
+        htmlContent += celebritiesFeedData.map(function(data){ var product = data.data.find(function(product) { return product.name == productName }); if(!product){ var product = data.data[0] } var adData = product.data.find(function(obj){ return obj.AD_SIZE == '300x600'; }); return '<div '+(model == data.name ? 'class="selected"' : '')+' data-id="' + data.name + '"><div class="'+(modelCount>5?'modelImage1':'modelImage')+'" style="background-image:url(\'' + 'assets/'+ adData.MODEL + '/' + adData.IMAGE_URL3 + '\')"></div><div class="modelLabel">'+data.name + '</div></div>' }).join('');
         document.querySelector('#modelHeader').innerHTML = htmlContent;
         htmlContent = '';
         var modelData = celebritiesFeedData.find(function(data){ return data.name == model; });
