--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1.5/ads/Template4/Ads/300x600/z300x600.html
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1.5/ads/Template4/Ads/300x600/z300x600.html
@@ -36,7 +36,7 @@
         ];
 
         if(contentD && contentD.length) { contentD.forEach(function(data) { amo.registerContent(data); }); }
-        amo.registerVariation("layout", "PPTLaptop");
+        amo.registerVariation("layout", "WordLaptop");
         amo.registerVariation("headline1", "['<#2e2e2e>Create your |best work','28px',31,70,'29','350', 'left']");
         amo.registerVariation("headline2", "['<#2e2e2e>Show every angle of your |story in 3D with <#D83B01>Office 365','16.5px',31,142,'21','350', 'left']");
         amo.registerVariation("ctaText", "ACHETER MAINTENANT");//CLICK HERE
