--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1.5/ads/Template4/Ads/728x90/PPTLaptop/O365_CreateYourBestWork_USA_728x90_BAN_PowerPoint_3D_NA_NA_ANI_BN_T1_2.htm
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1.5/ads/Template4/Ads/728x90/PPTLaptop/O365_CreateYourBestWork_USA_728x90_BAN_PowerPoint_3D_NA_NA_ANI_BN_T1_2.htm
@@ -208,6 +208,8 @@ var startBanner = function(){
 						layers.cta.children[0].graphics.beginFill(ctaBackgroundColor).drawRect(0, -15, ctaWidth, 30);
 						layers.cta.arrow.y = 0;
 						layers.cta.arrow.regY = 12.5;
+						layers.cta.y = 58
+						layers.txtCta.y = 57.2;
 						if(position == 'right') {
 							layers.cta.x = adWidth - ctaWidth + 300;
 							layers.txtCta.x = adWidth - ctaWidth + 15 + 300;
