--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template4/Ads/728x90/z728x90.html
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template4/Ads/728x90/z728x90.html
@@ -36,7 +36,7 @@
         ];
 
         if(contentD && contentD.length) { contentD.forEach(function(data) { amo.registerContent(data); }); }
-        amo.registerVariation("layout", "PPTLaptop");
+        amo.registerVariation("layout", "ExcelLaptop");
         amo.registerVariation("headline1", "['<#2e2e2e>Create your best work','22px',330,12,'20','350', 'left']");
         amo.registerVariation("headline2", "['<#2e2e2e>Show every angle of your story |in 3D with <#D83B01>Office 365','15px',330,40,'16','350', 'left']");
         amo.registerVariation("ctaText", "ACHETER MAINTENANT");//CLICK HERE
