--- a/C/Crocs/Crocs_SpringSummer_ProductsOnly_2019/ad.html
+++ b/C/Crocs/Crocs_SpringSummer_ProductsOnly_2019/ad.html
@@ -36,7 +36,7 @@
       }
       #headerWrapper {
         display: inline-block;
-        /* border-top: 4px solid #333; */
+        border-top: 4px solid #333;
       }
       #headerWrapper > div {
         font-family: Arial;
