--- a/C/Crocs/Crocs_SpringSummer_ProductsOnly_2019/ads/728x90/728x90.html
+++ b/C/Crocs/Crocs_SpringSummer_ProductsOnly_2019/ads/728x90/728x90.html
@@ -127,7 +127,7 @@
               -webkit-transition:transform ease-out 0.5s;
               transition:transform ease-out 0.5s;">
           </div>
-          <div id="productShadowImage" class="asset-bottom"
+          <div id="productShadowImage" class="asset"
             data-image="productShadowImage"
             style="position:absolute;
               top:0px;
@@ -140,7 +140,7 @@
               -webkit-transition:transform ease-out 0.5s;
               transition:transform ease-out 0.5s;">
           </div>
-          <div id="productImage" class="asset-bottom"
+          <div id="productImage" class="asset"
             data-image="productImage"
             style="position:absolute;
               top:0px;
