--- a/A/Altice/AlticeAugustCreative/ads/OPT_AO_64/300x600/300x600.html
+++ b/A/Altice/AlticeAugustCreative/ads/OPT_AO_64/300x600/300x600.html
@@ -68,27 +68,27 @@
       #cta:hover { background-color: !{ctaBtnHover}; }
     </style>
   <!-- Start of overrode asset attributes values -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 amo.registerClick("clickUrl","https://www.Optimum.com?s_cid=JuneAO64-_-d&bsp=&utm_source=programmatic&utm_medium=display&utm_campaign=acqbanner");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","300x600_ACC_OPT_June_ACQ_AO_Amex_64Yr1_NonSub_NY_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","300x600_ACC_OPT_June_ACQ_AO_Amex_64Yr1_NonSub_NY_Img_Frame03.png");
-amo.registerAttribute("frameImage4","IMAGE","300x600_ACC_OPT_July_ACQ_AO_Amz_64Yr1_NonSub_NY_Img_AmzCard200_Frame04.png");
-amo.registerAttribute("frameImage5","IMAGE","300x600_ACC_OPT_July_ACQ_AO_Amz_64Yr1_NonSub_NY_Img_AmzCard200_Frame04.png");
-amo.registerAttribute("frameText1","TEXT","BIGGEST<br>SUMMER <div style='font-size: 170%;line-height: 1;'>EVER</div>");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 55px;left:20px;line-height:1.1;'><div style='font-size: 28px;letter-spacing: -0.2px;'>Altice One</div><div style='font-size: 27px;color: #0084d6;letter-spacing: -0.5px;'>Our Best 2 Year Deal</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 120px;left:20px;font-size:16px;letter-spacing:-0.1px;'><div style='color:#0084d6;font-size: 29px;'><span>$74.99<sub style='font-size: 14px;vertical-align: 3%;margin-left: 2px;'>mo.</sub></span><div style='border-top: 3px solid;width: 99px;position: absolute;top: 19px;left: -2px;transform: rotate(-10deg);'></div></div><div style='color: #0084d6;font-size: 46px;margin-top: -9px;margin-left: -2px;letter-spacing: -0.5px;'><span>$64.99</span></div><div class='AlticeRegular' style='font-size: 15px;margin-top: -5px;letter-spacing: -0.1px;line-height: 1.1;'><font class='AlticeBold'>Save $10 a month in year 1</font><br>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameImage2","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame02.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
+amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
+amo.registerAttribute("frameImage5","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
+amo.registerAttribute("frameImage1","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame01.png");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 59px;left:21px;line-height:1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>Altice One +<br> Internet</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top: 126px;left: 21px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
 amo.registerAttribute("frameText31","TEXT","<div style='top: 55px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Up to 200 Mbps Internet</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 220 Channels</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 125px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>40% Better WiFi</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>Voice Activated Remote</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 195px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>4K Ultra HD</div></div><div class='AlticeRegular' style='position: absolute;top: 248px;left: 20px;font-size: 9.5px;'>Wired connection.<br>WiFi speeds may vary.</div></div>");
-amo.registerAttribute("frameText41","TEXT","<div style='top: 27px;left: 17px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 84px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -3px;'>$</sup>200</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 125px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Voice Activated Remote</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 160px;left: 20px;line-height: 1.6;font-size: 22px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>No Annual Contract</div></div><div class='AlticeRegular' style='position: absolute;top: 218px;left: 20px;font-size: 9.5px;'>Wired connection.<br>WiFi speeds may vary.</div></div>");
+amo.registerAttribute("frameText41","TEXT","<div style='top: 27px;left: 17px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 84px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -3px;'>$</sup>100</div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 135px;left: 20px;line-height: 1.1;font-size: 32px;'>Amazon.com<br>Gift Card.</div>");
 amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top: 212px;left: 20px;line-height: 1.2;letter-spacing: -0.25px;font-size: 9pt;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 55px;left:20px;line-height:1.1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>Altice One</div><div style='font-size: 30px;color: #0084d6;letter-spacing: -0.1px;'>Our Lowest<br>Price Ever!</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 157px;left: 20px;line-height:1.1;'><div style='color: #0084d6;font-size: 76px;'><sup style='font-size:60%;vertical-align: 45%;margin-right: -2px;'>$</sup>64<sup style='font-size:60%;vertical-align: 45%;margin-left: -2px;'>99</sup></div><div style='font-size: 20px;letter-spacing: -0.3px;margin-top: -6px;'>mo./1st yr.<div class='AlticeRegular' style='font-size: 12.6px;margin-top: 0px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top: 301px;left:20px;line-height: 1.2;font-size: 16px;letter-spacing:-0.1px;'><div>$200 Amazon.com<br>Gift Card. <span class='AlticeRegular' style='font-size: 76%;'>Restrictions apply.</span></div></div>");
-amo.registerAttribute("frameVideo1","IMAGE","300x600_OPT_AO_64_video.mp4");
+amo.registerAttribute("frameText51","TEXT","<div style='top: 59px;left:21px;line-height:1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>Altice One +<br> Internet</div></div>");
+amo.registerAttribute("frameText52","TEXT","<div style='top: 126px;left: 131px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53","TEXT","<div style='top: 240px;left: 21px;line-height: 1.4;font-size: 18px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 0px;'>+</span>$100 Amazon.com Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual Contract</div></div>");
+amo.registerAttribute("frameVideo1","IMAGE","300x600_AO.mp4");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -128,6 +128,7 @@ amo.registerAttribute("frameVideo1","IMAGE","300x600_OPT_AO_64_video.mp4");
       <div id="frameText51" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText51}</div>
       <div id="frameText52" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText52}</div>
       <div id="frameText53" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;">!{frameText53}</div>
+      <div id="priceLabel" class="asset" data-image="priceLabel" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;"></div>
       <div id="frame1" class="frame"
         style="transform-origin:bottom center;
         -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
@@ -166,7 +167,20 @@ amo.registerAttribute("frameVideo1","IMAGE","300x600_OPT_AO_64_video.mp4");
             -webkit-transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
             transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;">
         </div> -->
-        <div id="frameText1" class="text AlticeBold"
+        <div id="frameImage1" class="asset"
+          data-image="frameImage1"
+          style="top:0px;
+            left:0px;
+            width:inherit;
+            height:inherit;
+            transform-origin: center;
+            -webkit-transform:scale(0.5);
+            transform:scale(0.5);
+            -webkit-transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
+            transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
+            opacity:0;">
+        </div>
+        <!-- <div id="frameText1" class="text AlticeBold"
           data-text="frameText1"
           style="top:366px;
             left:20px;
@@ -180,7 +194,7 @@ amo.registerAttribute("frameVideo1","IMAGE","300x600_OPT_AO_64_video.mp4");
             opacity:0;
             -webkit-transition:transform ease-out 1.2s;
             transition:transform ease-out 1.2s;">
-        </div>
+        </div> -->
         <!-- <div id="frameText12" class="text-top-left AlticeBold"
           data-text="frameText12"
           style="top:383px;
@@ -236,10 +250,11 @@ amo.registerAttribute("frameVideo1","IMAGE","300x600_OPT_AO_64_video.mp4");
           staticData: {
             logoImage: 'images/300x600_Logo_Optimum.png',
             // introLogoImage: 'images/300x600_Logo_Optimum.png',
+            priceLabel: '300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
             // starImage: 'images/star.svg',
             ctaBtn: '#0084d6',
             ctaBtnHover: '#005990',
-            // ref: 'ref5.jpg',
+            // ref: 'ref2.jpg',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -307,6 +322,8 @@ amo.registerAttribute("frameVideo1","IMAGE","300x600_OPT_AO_64_video.mp4");
                             ad.layers.frameText52.style.transform = '';
                             ad.layers.frameText53.style.webkitTransform = '';
                             ad.layers.frameText53.style.transform = '';
+                            ad.layers.priceLabel.style.webkitTransform = '';
+                            ad.layers.priceLabel.style.transform = '';
                           }, 200);
                         }, 3000);
                       }, 200);
@@ -318,17 +335,10 @@ amo.registerAttribute("frameVideo1","IMAGE","300x600_OPT_AO_64_video.mp4");
           ad.layers.frameVideo1.querySelector('video').onplay = function(){
             ad.layers.cta.style.opacity = 1;
             setTimeout(function(){
-                ad.layers.frameText1.style.opacity = 1;
-                typingAnimation(ad.layers.frameText1.querySelector('span'), 50, function(){
-                  // setTimeout(function(){
-                  //   ad.layers.frameText1.style.opacity = 0;
-                  //   ad.layers.frameText12.style.opacity = 1;
-                  //   typingAnimation(ad.layers.frameText12.querySelector('span'), 35, function(){
-                  //
-                  //   });
-                  // }, 1500);
-                });
-            }, 500);
+                ad.layers.frameImage1.style.opacity = 1;
+                ad.layers.frameImage1.style.webkitTransform = '';
+                ad.layers.frameImage1.style.transform = '';
+            }, 2000);
           }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             setTimeout(function(){
