--- a/A/Altice/AlticeAugustCreative/ads/OPT_AO_64/728x90/728x90.html
+++ b/A/Altice/AlticeAugustCreative/ads/OPT_AO_64/728x90/728x90.html
@@ -68,27 +68,27 @@
       #cta:hover { background-color: !{ctaBtnHover}; }
     </style>
   <!-- Start of overrode asset attributes values -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 amo.registerClick("clickUrl","https://www.Optimum.com?s_cid=JuneAO64-_-d&bsp=&utm_source=programmatic&utm_medium=display&utm_campaign=acqbanner");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","728x90_ACC_OPT_June_ACQ_AO_Amex_64Yr1_NonSub_NY_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","728x90_ACC_OPT_June_ACQ_AO_Amex_64Yr1_NonSub_NY_Img_Frame03.png");
-amo.registerAttribute("frameImage4","IMAGE","728x90_ACC_OPT_July_ACQ_AO_Amz_64Yr1_NonSub_NY_Img_AmzCard200_Frame04.png");
-amo.registerAttribute("frameImage5","IMAGE","728x90_ACC_OPT_July_ACQ_AO_Amz_64Yr1_NonSub_NY_Img_AmzCard200_Frame04.png");
-amo.registerAttribute("frameText1","TEXT","<div style='display:inline-block;'>BIGGEST<br>SUMMER </div><div style='display:inline-block;font-size: 228%;line-height: 0.9;margin-left:6px;'>EVER</div>");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 7px;left:19px;line-height:1.1;'><div style='font-size: 24px;'>Altice One</div><div style='font-size: 24px;color: #0084d6;'>Our Best<br>2 Year Deal</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 3px;left: 193px;font-size:16px;letter-spacing:-0.1px;'><div style='color:#0084d6;font-size: 21px;'><span>$74.99<sub style='font-size: 10px;vertical-align: 3%;margin-left: 1px;'>mo.</sub></span><div style='border-top: 2px solid;width: 71px;position: absolute;top: 13px;left: -2px;transform: rotate(-10deg);'></div></div><div style='color: #0084d6;font-size: 36px;margin-top: -11px;margin-left: -3px;letter-spacing: -0.5px;'><span>$64.99</span></div><div class='AlticeRegular' style='font-size: 10px;margin-top: -7px;margin-left: -1px;letter-spacing: 0px;line-height: 1.1;'><font class='AlticeBold'>Save $10 a month in year 1</font><br>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameImage2","IMAGE","728x90_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame02.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
+amo.registerAttribute("frameImage4","IMAGE","728x90_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_DCO_NY_Img_AmzCard100_Frame04.png");
+amo.registerAttribute("frameImage5","IMAGE","1x1.png");
+amo.registerAttribute("frameImage1","IMAGE","728x90_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame01.png");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 8px;left: 20px;line-height:1.1;'><div style='font-size: 18px;letter-spacing: -0.2px;'>Altice One + Internet</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top: 20px;left: 20px;line-height:1.1;'><div style='color: #0084d6;font-size: 56px;'><sup style='font-size: 52%;vertical-align: 58%;margin-right: 0px;'>$</sup>64<sup style='font-size: 52%;vertical-align: 58%;/* margin-left: -2px; */'>99</sup></div><div style='font-size: 13px;letter-spacing: -0.3px;position: absolute;top: 37px;left: 88px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10.5px;margin-top: 0px;margin-left: -87px;'>Plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 10px;left: 20px;line-height: 1.3;font-size: 19px;'><div><span style='color:#0084d6;padding-right:6px;'>+</span>Up to 200 Mbps Internet</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 34px;left: 20px;line-height: 1.3;font-size: 19px;'><div><span style='color:#0084d6;padding-right:6px;'>+</span>Over 220 Channels</div><div><span style='color:#0084d6;padding-right:6px;'>+</span>40% Better WiFi</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 10px;left: 280px;line-height: 1.3;font-size: 19px;'><div><span style='color:#0084d6;padding-right:6px;'>+</span>Voice Activated Remote</div><div><span style='color:#0084d6;padding-right:6px;'>+</span>4K Ultra HD</div></div><div class='AlticeRegular' style='position: absolute;top:55px;left:280px;font-size: 9.5px;'>Wired connection.<br>WiFi speeds may vary.</div></div>");
-amo.registerAttribute("frameText41","TEXT","<div style='top: 5px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>200</div></div>");
-amo.registerAttribute("frameText42","TEXT","<div style='top: 25px;left: 133px;line-height: 1.1;font-size: 20px;'>Amazon.com Gift Card.</div>");
-amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top:47px;left:133px;line-height: 1.6;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 8px;left: 23px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Altice One</div><div style='font-size: 24px;color: #0084d6;letter-spacing: -0.1px;'>Our Lowest<br>Price Ever!</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 3px;left: 166px;line-height:1.1;'><div style='color: #0084d6;font-size: 50px;'><sup style='font-size:60%;vertical-align: 45%;margin-right: -2px;'>$</sup>64<sup style='font-size:60%;vertical-align: 45%;margin-left: -2px;'>99</sup></div><div style='font-size: 18px;letter-spacing:-0.1px;margin-top: -5px;margin-left: 5px;'>mo./1st yr.<div class='AlticeRegular' style='font-size: 9px;margin-top: 1px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top: 25px;left: 330px;line-height: 1.2;font-size:12px;letter-spacing:-0.1px;'><div>$200 Amazon.com<br>Gift Card. <div class='AlticeRegular' style='font-size: 70%;margin-top:2px;margin-left:0px;'>Restrictions apply.</div></div></div>");
-amo.registerAttribute("frameVideo1","IMAGE","728x90_OPT_AO_64_video.mp4");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 14px;left: 19px;line-height: 1.6;font-size: 20px;'><div><span style='color:#0084d6;padding-right: 1px;'>+</span>Up to 100 Mbps Internet</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 45px;left: 19px;line-height: 1.2;font-size: 20px;'><div><span style='color:#0084d6;padding-right:1px;'>+</span>Over 220 Channels</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 18px;left: 282px;line-height: 1.3;font-size: 20px;'><div><span style='color:#0084d6;padding-right:1px;'>+</span>Voice Activated Remote</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:1px;'>+</span>No Annual Contract</div><div class='AlticeRegular' style='position: absolute;top:50px;left:185px;width:120px;font-size: 9.5px;line-height:1;'>Wired connection.<br>WiFi speeds may vary.</div></div>");
+amo.registerAttribute("frameText41","TEXT","<div style='top: 5px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>100</div></div>");
+amo.registerAttribute("frameText42","TEXT","<div style='top: 25px;left: 123px;line-height: 1.1;font-size: 20px;'>Amazon.com Gift Card.</div>");
+amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top:47px;left:123px;line-height: 1.6;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see amazon.com/gc-legal</div>");
+amo.registerAttribute("frameText51","TEXT","<div style='top: 8px;left: 116px;line-height:1.1;'><div style='font-size: 18px;letter-spacing: -0.2px;'>Altice One + Internet</div></div>");
+amo.registerAttribute("frameText52","TEXT","<div style='top: 20px;left: 113px;line-height:1.1;'><div style='color: #0084d6;font-size: 56px;'><sup style='font-size: 52%;vertical-align: 58%;margin-right: 0px;'>$</sup>64<sup style='font-size: 52%;vertical-align: 58%;/* margin-left: -2px; */'>99</sup></div><div style='font-size: 13px;letter-spacing: -0.3px;position: absolute;top: 37px;left: 88px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10.5px;margin-top: 0px;margin-left: -87px;'>Plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53","TEXT","<div style='top:29px;left:320px;line-height:1.3;font-size:16px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:0px;'>+</span>$100 Amazon.com Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual Contract</div></div>");
+amo.registerAttribute("frameVideo1","IMAGE","728x90_AO.mp4");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -128,6 +128,7 @@ amo.registerAttribute("frameVideo1","IMAGE","728x90_OPT_AO_64_video.mp4");
       <div id="frameText51" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText51}</div>
       <div id="frameText52" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateY(100%);transform:translateY(100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText52}</div>
       <div id="frameText53" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateY(100%);transform:translateY(100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;">!{frameText53}</div>
+      <div id="priceLabel" class="asset" data-image="priceLabel" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;"></div>
       <div id="frame1" class="frame"
         style="transform-origin:bottom center;
         -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
@@ -159,7 +160,20 @@ amo.registerAttribute("frameVideo1","IMAGE","728x90_OPT_AO_64_video.mp4");
             -webkit-transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
             transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;">
         </div> -->
-        <div id="frameText1" class="text-left AlticeBold"
+        <div id="frameImage1" class="asset"
+          data-image="frameImage1"
+          style="top:0px;
+            left:0px;
+            width:inherit;
+            height:inherit;
+            transform-origin: center;
+            -webkit-transform:scale(0.5);
+            transform:scale(0.5);
+            -webkit-transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
+            transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
+            opacity:0;">
+        </div>
+        <!-- <div id="frameText1" class="text-left AlticeBold"
           data-text="frameText1"
           style="top:7px;
             left:255px;
@@ -173,7 +187,7 @@ amo.registerAttribute("frameVideo1","IMAGE","728x90_OPT_AO_64_video.mp4");
             opacity:0;
             -webkit-transition:transform ease-out 1.2s;
             transition:transform ease-out 1.2s;">
-        </div>
+        </div> -->
         <!-- <div id="frameText12" class="text-left AlticeBold"
           data-text="frameText12"
           style="top:5px;
@@ -230,10 +244,11 @@ amo.registerAttribute("frameVideo1","IMAGE","728x90_OPT_AO_64_video.mp4");
           staticData: {
             logoImage: 'images/728x90_Logo_Optimum.png',
             // introLogoImage: 'images/728x90_Logo_Optimum.png',
+            priceLabel: '728x90_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
             // starImage: 'images/star.svg',
             ctaBtn: '#0084d6',
             ctaBtnHover: '#005990',
-            // ref: 'ref5.jpg',
+            // ref: 'ref2.jpg',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -302,6 +317,8 @@ amo.registerAttribute("frameVideo1","IMAGE","728x90_OPT_AO_64_video.mp4");
                             ad.layers.frameText52.style.transform = '';
                             ad.layers.frameText53.style.webkitTransform = '';
                             ad.layers.frameText53.style.transform = '';
+                            ad.layers.priceLabel.style.webkitTransform = '';
+                            ad.layers.priceLabel.style.transform = '';
                           }, 200);
                         }, 3000);
                       }, 200);
@@ -313,17 +330,10 @@ amo.registerAttribute("frameVideo1","IMAGE","728x90_OPT_AO_64_video.mp4");
           ad.layers.frameVideo1.querySelector('video').onplay = function(){
             ad.layers.cta.style.opacity = 1;
             setTimeout(function(){
-                ad.layers.frameText1.style.opacity = 1;
-                typingAnimation(ad.layers.frameText1.querySelector('span'), 50, function(){
-                  // setTimeout(function(){
-                  //   ad.layers.frameText1.style.opacity = 0;
-                  //   ad.layers.frameText12.style.opacity = 1;
-                  //   typingAnimation(ad.layers.frameText12.querySelector('span'), 35, function(){
-                  //
-                  //   });
-                  // }, 1500);
-                });
-            }, 500);
+                ad.layers.frameImage1.style.opacity = 1;
+                ad.layers.frameImage1.style.webkitTransform = '';
+                ad.layers.frameImage1.style.transform = '';
+            }, 2000);
           }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             setTimeout(function(){
